Tests/ModulesExampleDirectory/InvalidModuleExample/ModuleInvalidNotImplementParentAbstract.php
<?php
declare(strict_types=1);

namespace Pentagonal\Modular\Test\ModuleExampleDirectory;

use Pentagonal\Modular\Module;

/**
 * Class ModuleInvalidNotImplementParentAbstract
 * @package Pentagonal\Modular\Test\ModuleExampleDirectory
 */
class ModuleInvalidNotImplementParentAbstract extends Module
{
}
